# Multivac

./: README.md  main.py  pyproject.toml  requirements.txt
multivac/: __init__.py  __main__.py  analysis.py  cli.py  git_tracker.py  server.py
