[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multivac"
version = "0.1.0"
description = "Git-aware structural entropy timeline for Python codebases"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Daniel Rösel"}
]
dependencies = [
  "numpy>=1.24.0",
  "flask>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/velocitatem/Multivac"

[project.scripts]
multivac = "multivac.cli:main"

[tool.setuptools.packages.find]
include = ["multivac*"]
